Fix some issues with navigation on small screens.

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -34,6 +34,10 @@ $header-height: 65px;
   height: $header-height;
   line-height: $header-height;
   text-align: center;
+
+  @media(max-width: $screen-xs-max) {
+    padding: 0;
+  }
 }
 
 .nav li a {
@@ -45,6 +49,11 @@ $header-height: 65px;
   font-size: 130%;
   color: $swin-red-bright;
   text-transform: capitalize;
+
+  @media(max-width: $screen-xs-max) {
+    padding: 0;
+    font-size: 110%;
+  }
 
   &:hover, &:focus {
     background-color: transparent;
